--- a/Rules/Player Notes/Player Notes.tex
+++ b/Rules/Player Notes/Player Notes.tex
@@ -47,7 +47,7 @@ The following are notes for competitors. Please note that your moderator may ove
 \vspace*{0.3 cm}
 On reading
 \begin{itemize}
-    \item Players may stop the moderator at any time to request that the moderator speak louder or more clearly.
+    \item Competitors may stop the moderator to request that the moderator speak louder or more clearly.
 \end{itemize}
 
 \vspace*{0.3 cm}
@@ -56,7 +56,7 @@ On answers
     \item The bolded part of each answer is required to receive points. Other parts are optional.
     \item Brackets beside answers provide the moderator notes and additional information to assist with scoring (which may override the rules provided on this page).
     \item Unless the answer is a proper noun, the moderator must accept both singular and plural variants of an answer. 
-    \item ``prompt'': The moderator will say \textit{prompt} or indicate in some other way that additional information is required. The moderator may prompt multiple times on the same question as long as each subsequent answer provides more information than the last and each answer is correct.
+    \item ``prompt'': The moderator will say \textit{prompt} or indicate in some other way that additional or alternate information is required. The moderator may prompt multiple times on the same question as long as each subsequent answer provides more information and each answer is correct.
 \end{itemize}
 
 \vspace*{0.3 cm}
@@ -79,13 +79,15 @@ A sample toss-up question is shown below.
 \vspace*{0.3 cm}
 On timing
 \begin{itemize}
-    \item If a team answers a bonus incorrectly and more than \textbf{five} seconds remain, the other team receives the remaining time to buzz in.
-    \item If a team answers a bonus incorrectly and fewer than \textbf{five} seconds remain, the other team receives \textbf{five} seconds to buzz in.
+    \item If the first team to buzz in answers a bonus incorrectly and \textit{more} than \textbf{five} seconds remain, the other team receives the remaining time to buzz in.
+    \item If the first team to buzz in answers a bonus incorrectly and \textit{fewer} than \textbf{five} seconds remain, the other team receives \textbf{five} seconds to buzz in.
     \item If a toss-up question requires compuation, it will be prefaced with ``pencils and paper ready.''
     \item If a bonus question requires compuation, only the introductory sentence will be prefaced with ``pencils and paper ready.''
     \item For each question, teams receive the amount of time indicated in the table below to buzz in.
 
 \end{itemize}
+
+\vspace*{\fill}
 
 \begin{center}
 \begin{tabular}{||c|c||} 
