--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -114,6 +114,12 @@ Questions begin on the next page.
 
     % Question 8
     \item \textbf{MISCELLANEOUS} \\ Although \textit{this} singer was originally born Reginald Dwight, he was later inspired by his old band \textit{Bluesology} to change his name. Just after presenting \textit{this} singer with the National Humanities Medal, President Joe Biden said ``it's all his fault [the US] is spending six billion dollars in taxpayer money to fight AIDS.'' For 10 points, name \textit{this} singer of \textit{I'm Still Standing}, \textit{Crocodile Rock}, and \textit{Rocket Man}. \\ ANSWER: \underline{Elton John} \backtrack
+    \item \textbf{LANGUAGE ARTS} \\ English is derived from many languages, so it has many words with multiple meanings. Name each of the following words by two of their definitions or synonyms. For 10 points each,
+    \begin{enumerate}[label=\Alph*]
+        \item \textit{This} word can refer to a flow of water or air or be used as a synonym for \textit{present}. \\ ANSWER: \underline{current}
+        \item \textit{This} word can be used to describe a muscular person or be used as a verb that means to polish something to a shine. \\ ANSWER: \underline{buff}
+        \item \textit{This} word can refer to a lightning strike or be used to refer to ammunition for a crossbow. \\ ANSWER: \underline{bolt}
+    \end{enumerate}
 
 
 \end{enumerate}
