--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -64,7 +64,7 @@ Questions begin on the next page.
     \begin{enumerate}[label=\Alph*]
         \item \textit{This} quantity is the rotational analogue of force. When a force is applied perpendicular to a lever arm, \textit{this} quantity is the force applied multiplied by the distance to the pivot. \\ ANSWER: \underline{torque}
         \item Torque is the rotational analogue of force. Therefore, by Newton's Second Law, it is also equal to angular acceleration multiplied by \textit{this} quantity. \\ ANSWER: \underline{rotational inertia} [also accept \underline{moment of inertia}, \underline{angular mass}, \underline{rotational mass}, or \underline{second moment of mass}]
-        \item When the force and lever arm vectors are not perpendicular, \textit{this} vector operation must be used to find torque. Unlike the dot product, this operation yields a vector. \\ ANSWER: \underline{cross} product
+        \item When the force and lever arm vectors are not perpendicular, \textit{this} vector operation must be used to find torque. Unlike the dot product, this operation yields another vector. \\ ANSWER: \underline{cross} product
     \end{enumerate} 
 
     % Question 3
