Added toss-up 9 and started bonus

--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -120,6 +120,15 @@ Questions begin on the next page.
         \item \textit{This} word can be used to describe a muscular person or be used as a verb that means to polish something to a shine. \\ ANSWER: \underline{buff}
         \item \textit{This} word can refer to a lightning strike or refer to ammunition for a crossbow. \\ ANSWER: \underline{bolt}
     \end{enumerate}
+    
+    % Question 9
+    \item \textbf{HISTORY} \\ Supporters of \textit{this} American movement were called \textit{drys}, while opposers were called \textit{wets}. \textit{This} movement was largely supported by temperance activists, and those who violated it were called bootleggers. The Volstead Act was passed to provide enforcement details for the Eighteenth Amendment, which ratified \textit{this} movement. For 10 points, name \textit{this} early twentieth century movement which pushed to outlaw alcohol. \\ ANSWER: \underline{Prohibition} \backtrack
+    \item \textbf{MATH} \\ Pencils and paper ready. In math, you can often circumvent challenging computation by taking clever shortcuts. Evaluate the following math expressions in ten seconds each. To do so successfully, you'll likely need to use some tricks.
+    \begin{enumerate}[label=\Alph*]
+        \item Evaluate two hundred fifty-five squared minus two hundred forty-five squared. \\ ANSWER: \underline{5000}
+        \item Evaluate the fourth root of two to the twentieth power. \\ ANSWER: \underline{32}
+        \item FILL
+    \end{enumerate}
 
 
 \end{enumerate}
