--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -127,7 +127,7 @@ Questions begin on the next page.
     \begin{enumerate}[label=\Alph*]
         \item Evaluate two hundred fifty-five squared minus two hundred forty-five squared. \\ ANSWER: \underline{5000}
         \item Evaluate the fourth root of two to the twentieth power. \\ ANSWER: \underline{32}
-        \item FILL
+        \item Evaluate six percent of two hundred fifty. \\ ANSWER: \underline{15}
     \end{enumerate}
 
 
