Added Toss-up 10 and updated logo in scorekeeper

--- a/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
+++ b/Round-1-Set-2/Scholastic Bowl Round 1 Set 2 Questions.tex
@@ -130,6 +130,8 @@ Questions begin on the next page.
         \item Evaluate the fourth root of two to the twentieth power. \\ ANSWER: \underline{32}
     \end{enumerate}
 
+    % Question 10
+    \item \textbf{SOCIAL SCIENCE} \\ The Speaker of \textit{this} state's House of Representatives, Mike Madigan, resigned in 2021 after fifty years in office. Despite being a Republican, Adam Kinziger, a congressman from \textit{this} state, voted to impeach Donald Trump. Brandon Johnson is the fourteenth consecutive Democrat to hold office as a mayor in \textit{this} state, which Donald Trump said was more dangerous than Afghanistan. For 10 points, name \textit{this} state which JB Pritzker governs from Springfield. \backtrack
 
 \end{enumerate}
 
