--- a/Rules/Player Notes/Player Notes.tex
+++ b/Rules/Player Notes/Player Notes.tex
@@ -72,7 +72,7 @@ A sample toss-up question is shown below.
 \begin{mdframed}[style=sample]
     \begin{enumerate}
         \setcounter{enumi}{7}
-        \item \textbf{SCIENCE} \\ The release of energy in \textit{these} events is described by elastic-rebound theory. \textit{These} events are detected by triangulation of P and S waves. The modified Mercalli scale measures the (*) intensity of \textit{these} events, unlike a logarithmic scale for their magnitude, which is named for Charles Richter. \textit{These} events begin at an epicenter and can cause tsunamis. For 10 points, name \textit{these} natural disasters that are caused by rupturing faults in the crust. \\ ANSWER: \underline{earthquake}
+        \item \textbf{SCIENCE} \\ The release of energy in \textit{these} events is described by elastic-rebound theory. \textit{These} events are detected by triangulation of P and S waves. The modified Mercalli scale measures the (*) intensity of \textit{these} events, unlike a logarithmic scale for their magnitude, which is named for Charles Richter. \textit{These} events begin at an epicenter and can cause tsunamis. For 10 points, name \textit{these} natural disasters which are caused by rupturing faults in the crust. \\ ANSWER: \underline{earthquake}
     \end{enumerate}
     \end{mdframed}
 
