Wrote Toss-up 1 and Bonus 1

--- a/Round-1-Set-3/Scholastic Bowl Round 1 Set 3 Questions.tex
+++ b/Round-1-Set-3/Scholastic Bowl Round 1 Set 3 Questions.tex
@@ -50,7 +50,13 @@ Questions begin on the next page.
 
 \begin{enumerate}
     % Question 1
-    \item \textbf{SUBJECT} \\ Fill
+    \item \textbf{HISTORY} \\ \textit{This} former Premier of the Soviet Union introduced a series of Five-Year Plans to collectivize agriculture and expand heavy industry. \textit{This} man supported Vladimir Lenin's Bolshevik party, and was a key proponent in the Russian Revolution. Upon Lenin's death, \textit{this} man defeated and banished Leon Trotsky to become leader of the USSR. For 10 points, name \textit{this} communist leader who led the Soviet Union in World War II. \\ ANSWER: Joseph \underline{Stalin} \backtrack
+    \item \textbf{SCIENCE} \\ Black holes are regions of spacetime where a gravitational field is so strong that nothing can escape it. Name the following terms used to describe black holes by their definitions. For 10 points each,
+    \begin{enumerate}[label=\Alph*]
+        \item \textit{This} term, also called the \textit{point of no return}, is used to define the boundary of a black hole. If anything crosses \textit{this} boundary, it will inevitably be swallowed by the black hole. \\ ANSWER: \underline{event horizon}
+        \item The largest type of black hole, like the one at the center of the Milky Way, is described by \textit{this} adjective. \\ ANSWER: \underline{supermassive}
+        \item  The supermassive black hole at the center of the Milky Way is named \textit{this}. \\ ANSWER: \underline{Sagittarius A}*
+    \end{enumerate}
 \end{enumerate}
 
 
