Added Toss-up 3

--- a/Round-1-Set-3/Scholastic Bowl Round 1 Set 3 Questions.tex
+++ b/Round-1-Set-3/Scholastic Bowl Round 1 Set 3 Questions.tex
@@ -67,6 +67,9 @@ Questions begin on the next page.
         \item \textit{This} Titaness was the Greek goddess of witchcraft. She was the handmaiden of Persephone and the goddess of ghosts. \\ ANSWER: \underline{Hecate}
     \end{enumerate}
 
+    % Question 3
+    \item \textbf{FINE ARTS} \\ \textit{This} musical work uses the melody of the folk song “At the Gate,” and it opens with the hymn “O Lord, Save thy People.” \textit{This} work’s composer hated his composition; he disliked its overt patriotism and felt it was too noisy, possibly because he orchestrated it with (*) cannons. \textit{This} work uses \textit{La Marseillaise} \colorbox{lightGray}{[La Mar\textperiodcentered ``say''\textperiodcentered\textbf{yez}]} to represent the invading French army, and represents their defeat with the song \textit{God Save the Tsar}. For 10 points, name \textit{this} work by Tchaikovsky that celebrates Russia’s victory over Napoleon in the title year. \\ ANSWER: The \underline{1812} Overture \backtrack
+
     
 \end{enumerate}
 
